--- a/index.html
+++ b/index.html
@@ -1,11 +1,37 @@
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17323106279">
-</script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+<html>
 
-  gtag('config', 'AW-17323106279');
-</script>
-<html> <head> <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"> <title>RDU Elite Valet - Waitlist</title> <style type="text/css"> html { margin: 0; height: 100%; overflow: hidden; } iframe { position: absolute; top: 0; right: 0; bottom: 0; left: 0; border: 0; } </style> </head> <body> <iframe src="https://app.youform.com/forms/7a7ktdsj" loading="lazy" width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0"></iframe> </body></html>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <title>RDU Elite Valet - Waitlist</title>
+    <style type="text/css">
+        html {
+            margin: 0;
+            height: 100%;
+            overflow: hidden;
+        }
+
+        iframe {
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            border: 0;
+        }
+    </style>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17323106279">
+    </script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'AW-17323106279');
+    </script>
+</head>
+
+<body> <iframe src="https://app.youform.com/forms/7a7ktdsj" loading="lazy" width="100%" height="100%" frameborder="0"
+        marginheight="0" marginwidth="0"></iframe> </body>
+
+</html>
